mobile responsiveness for index page

--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -84,12 +84,12 @@ img {
 .main-content {
     /* Centering info box */
     background-color: #ffffff;
-    width: 960px;
     height: 720px;
+    width: 85%;
     position: relative;
     top: 50px;
-    left: 480px;
-    margin-bottom: 200px;
+    margin-left: 60px;
+    margin-right: 60px;
 }
 
 #about-header {
@@ -110,6 +110,7 @@ img {
 
 #bio-paragraph {
     padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 #hobbies-header {
@@ -142,14 +143,18 @@ header, body, footer {
     overflow-x: hidden;
 }
 
+
 /* Media Queries */
 @media (max-width: 980px){
+/* Header work */
     #header-name{
         margin-left: 30px;
     }
 }
 
+
 @media (max-width: 768px){
+/* Header work */
     #header-name {
         margin-left: 12px;
     }
@@ -157,9 +162,14 @@ header, body, footer {
     .header-anchors {
         right: 0%;
     }
+
+    #bio-paragraph, #hobbies-paragraph {
+        font-size: 20px;
+    }
 }
 
 @media (max-width: 640px){
+/* Header work */
     header {
         border: 0px;
         height: 140px;
@@ -174,11 +184,12 @@ header, body, footer {
 
     .header-anchors {
         border-bottom: 2px solid #cccccc;
-        position: static;
+        position: relative;
         display: inline-block;
         padding-top: 20px;
         height: 38px;
         width: 100%;
+        margin-left: 28%;
     }
 
     #about, #portfolio {
@@ -187,5 +198,50 @@ header, body, footer {
 
     #about, #portfolio, #contact {
         margin: 0px;
+        font-size: 14px;
+    }
+    
+/* Main content work */
+    #bio-paragraph, #hobbies-paragraph {
+        font-size: 17px;
+    }
+
+    p {
+        clear: both;
+    }
+
+    .content {
+        height: 1000px;
+    }
+
+    .main-content {
+    /* Height of content box scales with height of background height */
+        text-align: center;
+        height: 90%;
+    }
+
+    img {
+        margin: 0 auto;
+        position: relative;
+        left: calc(50% - 100px);
+    }
+
+
+}
+
+/* Footer work */
+    footer {
+        position: relative;
+        bottom: 0%;
+    }
+
+
+@media (max-width: 384px) {
+    p{
+        font-size: 16px;
+    }
+
+    .content {
+        height: 1300px;
     }
 }
