--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -39,7 +39,9 @@ footer {
 }
 
 a {
+    float: left;
     position: relative;
+    left: 40%;
     margin-top: 29px;
     padding-right: 25px;
     padding-left: 25px;
